<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_axisCtrl" Id="{1584dc6d-5e1c-4ce8-b4b0-ba9c2dcb1a99}">
    <Declaration><![CDATA[TYPE ST_axisCtrl :
STRUCT
	iStatus	: INT;
	iCmd	: INT;
	iSpeed	: INT;
	rPosition	: LREAL;
	sMsg	: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>